log
Fri 29 Mar 2024 02:17:50 PM UTC: 
 tests:  0|6
total_score: 0/70
93e1a79
Fri 29 Mar 2024 02:19:18 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f8a87ab
Fri 29 Mar 2024 02:19:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c85409e
Fri 29 Mar 2024 02:20:23 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
ad901c3
Fri 29 Mar 2024 02:22:24 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:44:11: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   44 |   if (list->next != NULL){
      |           ^~
list.c:45:25: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   45 |     list->current = list->next;
      |                         ^~
list.c:46:16: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   46 |     return list->next;
      |                ^~
Compilation failed
2603800
Fri 29 Mar 2024 02:22:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:44:12: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   44 |   if ((list->next) != NULL){
      |            ^~
list.c:45:25: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   45 |     list->current = list->next;
      |                         ^~
list.c:46:16: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   46 |     return list->next;
      |                ^~
Compilation failed
5c6657a
Fri 29 Mar 2024 02:24:03 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
83f91f7
Fri 29 Mar 2024 02:25:52 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
012e5a1
Fri 29 Mar 2024 02:27:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0677ba4
Fri 29 Mar 2024 02:28:20 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8a8d00e
Fri 29 Mar 2024 02:28:52 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
list.c: In function ‘nextList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
903d53b
